--- a/service_apartment.html
+++ b/service_apartment.html
@@ -129,6 +129,80 @@
             <span class="icon">🔍</span>
         </button>
     </section>
+
+    <section class="contact-section">
+
+    <h1>Looking for Relocation Support?</h1>
+    <p class="subtitle">
+        Get started by completing the form below, and our team will contact you with 
+        tailored solutions to meet your business or team’s relocation needs.
+    </p>
+
+    <form class="basic-form">
+        <div class="form-grid">
+
+        
+            <div class="form-group">
+                <label>Full Name <span>*</span></label>
+                <input type="text" placeholder="Enter Your Full Name">
+            </div>
+
+            <div class="form-group">
+                <label>Email Address <span>*</span></label>
+                <input type="email" placeholder="Enter Your Email Address">
+            </div>
+
+            <div class="form-group">
+                <label>Company Name <span>*</span></label>
+                <input type="text" placeholder="Enter Your Company Name">
+            </div>
+
+            <div class="form-group">
+                <label>Phone Number</label>
+                <input type="text" placeholder="Enter Your Phone Number">
+            </div>
+        </div>
+        <div class="form-group">
+            <label>Average Duration Of Booking</label>
+            <input type="text">
+        </div>
+         <div class="form-group">
+            <label>Key Locations Required </label>
+            <input type="text" placeholder="Enter Your Company Name">
+        </div>
+          <div class="form-group">
+            <label>Enquiry<span>*</span></label>
+            <textarea name="" id="" rows="5"></textarea>
+        </div>
+        <div class="form-container">
+            <label class="checkbox-container">
+                <input type="checkbox">
+                <span class="checkmark"></span>
+                Please tick this box to confirm that you've read our 
+                Privacy Policy and 
+               Client Terms & Conditions*
+            </label>
+
+            <p class="note">
+                This site is protected by reCAPTCHA and the Google 
+                <a href="#">Privacy Policy</a> and 
+                <a href="#">Terms of Service</a> apply.
+            </p>
+
+            <button class="submit-btn">Submit</button>
+        </div>
+    </form>
+
+</section>
+<section class="contact" id="contact">
+  <h2>Contact Us</h2>
+  <p>Book your stay or schedule an apartment inspection today!</p>
+  <button>Get in Touch</button>
+</section>
+
+<footer>
+  © 2025 BlueHaven Apartments — All Rights Reserved.
+</footer>
    
 </body>
 <script>
